--- a/client/src/components/bars/navBar/navBar.module.css
+++ b/client/src/components/bars/navBar/navBar.module.css
@@ -4,12 +4,12 @@
   justify-items: center;
   
   transition: height 1s;
-  height: 100px; /* Establece una altura inicial para el contenedor */
+  height: 70px; /* Establece una altura inicial para el contenedor */
 }
 
 .container:hover {
 
-  height: 200px; /* Aumenta la altura del contenedor cuando el cursor está sobre él */
+  height: 110px; /* Aumenta la altura del contenedor cuando el cursor está sobre él */
 }
 
 
@@ -76,4 +76,10 @@
     border: none;
     padding: 1%;
     transition: width 2s;
+  }
+
+
+  .searchBarContainer {
+    display: flex;
+    align-items: center;
   }
