--- a/client/src/components/datos/Card/Card.module.css
+++ b/client/src/components/datos/Card/Card.module.css
@@ -3,8 +3,13 @@
     border: 1px solid #ccc;
     padding: 16px;
     margin-bottom: 16px;
+    transition: transform 0.6s;
+
   }
-  
+  .cardContainer:hover {
+    transform: scale(1.05);
+  }
+
   .title {
     font-size: 24px;
     font-weight: bold;
