--- a/client/src/components/views/HomePage/HomePage.module.css
+++ b/client/src/components/views/HomePage/HomePage.module.css
@@ -8,8 +8,11 @@
 .container{
     display: flex;
     flex-direction: column;
-
     width: 100%;
     justify-items: center;
     align-items: center;
 }   
+
+.pagination{
+    
+}
