--- a/client/src/components/views/HomePage/HomePage.module.css
+++ b/client/src/components/views/HomePage/HomePage.module.css
@@ -14,5 +14,23 @@
 }   
 
 .pagination{
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width:min-content ;
+}
+.paginationbutton{
+    margin:1%;
+    background-color: black;
+    color: rgb(180, 241, 241);
+    transition: transform 0.6s;
+
+}
+
+.paginationbutton:hover{
+    background-color: rgb(250, 250, 250);
+    color: rgb(0, 0, 0);
+    transform: scale(1.4);
+
 }
