--- a/client/src/components/views/HomePage/HomePage.module.css
+++ b/client/src/components/views/HomePage/HomePage.module.css
@@ -22,15 +22,43 @@
 }
 .paginationbutton{
     margin:1%;
-    background-color: black;
-    color: rgb(180, 241, 241);
+    background-color: rgb(247, 246, 246);
+    color: rgb(0, 0, 0);
     transition: transform 0.6s;
 
 }
 
 .paginationbutton:hover{
-    background-color: rgb(250, 250, 250);
-    color: rgb(0, 0, 0);
+    background-color: rgb(0, 0, 0);
+    color: rgb(248, 248, 248);
     transform: scale(1.4);
 
 }
+
+/*
+.Class button{
+    background-color:  rgb(179, 113, 26); 
+  border: solid 2px;
+  border-color:  rgb(58, 39, 0);;
+  border-radius: 4px;
+  color:  rgb(58, 39, 0);;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  transition-duration: 0.2s;
+  box-shadow: 0 3px rgb(58, 39, 0);
+}
+  
+.Class button:hover {
+    background-color: rgb(238, 175, 92); 
+    color: white;
+  }
+  .Class Link{
+    color:rgb(58, 39, 0)
+  }
+  .Class button:active {
+    box-shadow: 0 1px rgb(58, 39, 0);
+    transform: translateY(2px);
+}*/
