--- a/client/src/components/views/Perfil/Perfil.css
+++ b/client/src/components/views/Perfil/Perfil.css
@@ -21,3 +21,12 @@
 
     width: 70%;
 }
+
+
+.imagen{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: solid 1px;
+    border-color:rgb(76, 114, 165) ;
+}
