--- a/client/src/components/views/Perfil/Perfil.css
+++ b/client/src/components/views/Perfil/Perfil.css
@@ -9,7 +9,7 @@
     flex-direction: column;
     align-items: center;
 
-    width: 30%;
+    min-width: 30%;
     border: 1px solid blue;
     font-size: 2rem;
 }
@@ -19,7 +19,7 @@
     flex-direction: column;
     border: 1px solid red;
 
-    width: 70%;
+    min-width: 70%;
 }
 
 
