--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -1,3 +1,9 @@
-.app{
-    background-color: rgb(245, 245, 245);
+.darkContainer{
+    background-color: #302F2C;
+    color: #FFFFFF;
+    background-size: cover;
+}
+.lightContainer{
+    color:#FFFFFF;
+    color: #302F2C;
 }
