--- a/client/src/components/bars/filterBar/Filter_Bar.module.css
+++ b/client/src/components/bars/filterBar/Filter_Bar.module.css
@@ -1,9 +1,18 @@
-.bar1 {
-  display: flex;
-  color: aliceblue;
-  font-size: 14px;
+.container{
+  
+}
+.container{
+  display:flex;
+  flex-direction: row;
   align-items: center;
+}
+.bar1 {
+  display:flex;
+  flex-direction:column;
+  position: fixed;
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  font-size: 14px;
   justify-content:space-between;
-  width:100%;
-  background-color: rgba(20, 101, 107, 0.671);
+  width:min-content;
 }
