--- a/client/src/components/bars/navBar/navBar.module.css
+++ b/client/src/components/bars/navBar/navBar.module.css
@@ -4,20 +4,20 @@
   justify-items: center;
   
   transition: height 1s;
-  height: 70px; /* Establece una altura inicial para el contenedor */
+  height: 30px; /* Establece una altura inicial para el contenedor */
 }
 
 .container:hover {
 
-  height: 110px; /* Aumenta la altura del contenedor cuando el cursor está sobre él */
+  height: 40px; /* Aumenta la altura del contenedor cuando el cursor está sobre él */
 }
 
 
   
   .bar1 {
     margin:0%;
-  
-    background-color: rgba(12, 17, 68, 0.623);
+    background-color: rgba(251, 251, 252, 0.623);
+    color: black;
     align-items: center;
     width: 100%;
     font-family: 'Open Sans', Arial, sans-serif;
@@ -46,28 +46,23 @@
     text-align: center;
   }
 
-  .bar1 a.active {
-    color: rgb(126, 255, 249);
-  }
-
+ 
   .bar1 a:not(.active)::after {
     opacity: 0.1;
   }
 
   .bar1 a:not(.active):hover {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
   }
 
   .bar1 .link {
     display: block;
-    
     font-size: 12px;
     transition: transform 0.6s;
   }
 
   .bar1 .link:hover {
     text-shadow:  0px 3px 12px rgb(128, 255, 255);
-
     transform: scale(1.3);
   }
 
@@ -78,8 +73,3 @@
     transition: width 2s;
   }
 
-
-  .searchBarContainer {
-    display: flex;
-    align-items: center;
-  }
