--- a/client/src/components/bars/searchBar/searchBar.module.css
+++ b/client/src/components/bars/searchBar/searchBar.module.css
@@ -1,24 +1,24 @@
-.SearchBar {
+.container {
     display: flex;
-    margin-top: 1%;
-}
-
-.Container {
-    display: flex;
-
-    width: 100%;
     justify-content: center;
-    align-items: center
-}
-
-
-.button {
-    color: antiquewhite;
-    background-color: rgb(7, 146, 146);
-    border: 2px solid rgb(255, 0, 0) ;
-    border-radius: 5%;
-}
-
-.button:hover {
-    scale: 1.1    
-}
+    margin-top: 4%;
+  }
+  
+  .SearchBar {
+    display: flex;
+    align-items: center;
+  }
+  
+  .input {
+    width: 40%;
+    padding: 5px;
+    font-size: 16px;
+  }
+  
+  .buscar {
+    height: 30px;
+    margin-left: 10px;
+    padding: 5px 10px;
+    font-size: 16px;
+  }
+  
