--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -1,5 +1,5 @@
 .darkContainer{
-    background-color: #302F2C;
+    background-color: #010003;
     color: #FFFFFF;
     background-size: cover;
 }
