--- a/client/src/components/bars/filterBar/Filter_Bar.module.css
+++ b/client/src/components/bars/filterBar/Filter_Bar.module.css
@@ -1,22 +1,55 @@
-.container{
-  
-}
+
 .container{
   display:flex;
   flex-direction: row;
   align-items: center;
 }
 .bar1 {
-  display:flex;
-  flex-direction:column;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center; /* Agregar esta línea */
   position: fixed;
+  top: 1%;
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-size: 14px;
-  justify-content:space-between;
-  width:min-content;
+  width: min-content;
+}
+
+.bar1:hover{
+  cursor: pointer;
+
 }
 .img{
   height: 20px;
   width: 20px;
 }
+
+.plight {
+  background-color: white;
+  color: black;
+  transition: transform 0.3s
+  }
+  
+  .pinvi{
+  color: rgba(0, 0, 0, 0);
+  }
+.pdark {
+  
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+  transition: transform 0.3s
+}
+
+  .plight:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+
+ }
+  .pdark:hover {transform: scale(1.3);
+    cursor: pointer;
+  }
+
+  
+ 
