--- a/client/src/components/datos/Card/Card.module.css
+++ b/client/src/components/datos/Card/Card.module.css
@@ -1,43 +1,238 @@
-.cardContainer {
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
-    padding: 16px;
-    margin-bottom: 16px;
-    transition: transform 0.6s;
 
-  }
-  .cardContainer:hover {
-    transform: scale(1.05);
-  }
-
-  .title {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 8px;
-  }
-  
-  .description {
-    font-size: 16px;
-    margin-bottom: 8px;
-  }
-  
-  .rating {
-    font-size: 18px;
-    margin-bottom: 8px;
-  }
-  
   .free {
-    color: green;
+    color: rgb(71, 238, 71);
+    font-size: 12px;
     font-weight: bold;
   }
   
   .payment {
-    color: red;
+    font-size: 12px;
+
+    color: rgb(187, 50, 50);
     font-weight: bold;
   }
   
-  .language {
-    font-size: 16px;
-    color: #666;
+  .containerlight {
+    margin: 4%;
+    padding:40px;
+    border: 2px solid rgb(12, 1, 1);
+    background-color: #ffffff;
+    color: #030000;
+    width: 200px;
+    max-height: 150px;
+    width: 30.8%;
+    overflow: hidden;
+    animation: borderGradientAnimation1 infinite 2.5s;
+    transition: transform 0.7s, max-height 1s ease, width 1s ease;; 
+  }
+  .containerlight:hover {
+
+    max-height: max-content;
+   width: 100%;
+    transform: scale(1.1);
+  }
+
+
+  .containerdark {
+    margin: 4%;
+    padding:40px;
+    border: 2px solid rgb(255, 254, 254);
+    background-color: #000000;
+    color: #fcfcfc;
+    width: 200px;
+    max-height: 150px;
+    width: 30.8%;
+    overflow: hidden;
+    animation: borderGradientAnimation1 infinite 2.5s;
+    transition: transform 0.7s, max-height 1s ease, width 1s ease;; 
+  }
+
+  .containerdark:hover {
+
+    max-height: max-content;
+   width: 70%;
+    transform: scale(1.1);
+  }
+  .h1light {
+    font-size: 12px;
+    color: rgb(255, 255, 255);
+  }
+  .h1dark {
+    font-size: 12px;
+    color: white;
+  }
+  .inputlight {
+    background-color: white;
+    color: black;
+  }
+  .inputdark {
+    background-color: #302f2c;
+    color: white;
+  }
+  .buttonlight {
+    background-color: white;
+    color: black;
+    border: 2px solid black;
+  }
+  .buttondark {
+    background-color: #302f2c;
+    color: white;
+    border: 2px solid white;
   }
   
+
+  .labellight {
+    background-color: #f7f7f7;
+    color: black;
+  }
+  
+  .labeldark {
+    background-color: #000000;
+    color: white;
+  }
+  .plight {
+    
+    background-color: #f7f7f7;
+    color: rgb(0, 0, 0);
+    font-size: 14px;
+  }
+  .pdark {
+    background-color: #000000;
+    color: rgb(243, 242, 242);
+    font-size: 14px;
+  }
+  .divlight {
+    background-color: #f7f7f7;
+    color: black;  }
+  .divdark {
+    background-color: #000000;
+    color: rgb(243, 242, 242);
+  }
+  
+  .spanlight {
+    background-color: #f7f7f7;
+    color: black;
+  }
+  .spandark {
+    background-color: #000000;
+    color: rgb(243, 242, 242);  }
+  
+  .formlight {
+    background-color: #f7f7f7;
+    color: black;
+  }
+  
+  .formdark {
+    background-color: #000000;
+    color: rgb(243, 242, 242);   }
+
+  .hrlight {
+  background-color: #f7f7f7;
+    color: black;  }
+   .hrdark{
+   background-color: #000000;
+     color: rgb(255, 255, 255);  }
+  
+  .errorlight {
+    background-color: #f7f7f7;
+    color: black; 
+  }
+  
+    
+  .errordark {
+    background-color: #000000;
+    color: rgb(255, 255, 255);   }
+
+
+  .successlight {
+    background-color: #f7f7f7;
+    color: black;   }
+
+  .successdark {
+    background-color: #000000;
+    color: rgb(255, 255, 255);   }
+  
+  .linklight {
+    background-color: #f7f7f7;
+    color: black;  
+    font-size: 40px;
+     text-decoration: none; }
+  
+    
+  .linkdark {
+    background-color: #000000;
+    color: rgb(255, 255, 255); 
+      font-size: 40px;
+    text-decoration: none; }
+
+  .ullight {
+    background-color: #f7f7f7;
+    color: black;   }
+    
+  .uldark {
+    background-color: #000000;
+    color: rgb(255, 255, 255);  }
+  
+  
+  .h2light {
+    background-color: #f7f7f7;
+    color: black;   }
+      
+  
+    
+
+  
+
+  .h2dark {
+    background-color: #000000;
+    color: rgb(255, 255, 255);   }  
+  
+  
+
+    @keyframes borderGradientAnimation1 {
+      0% {
+        border-image: linear-gradient(to right, #ff00ff, #ff0000) 1;
+      }
+      20% {
+        border-image: linear-gradient(to right, #ff0000, #800080) 1;
+      }
+      40% {
+        border-image: linear-gradient(to right, #800080, #0000ff) 1;
+      }
+      60% {
+        border-image: linear-gradient(to right, #0000ff, #00ffff) 1;
+      }
+      80% {
+        border-image: linear-gradient(to right, #00ffff, #ff00ff) 1;
+      }
+      100% {
+        border-image: linear-gradient(to right, #ff00ff, #ff00ff) 1;
+      }
+    
+    }
+    @keyframes borderGradientAnimation2 {
+      0% {
+        border-image: linear-gradient(to right, #00ffff,#0000ff) 1;
+      }
+      20% {
+        border-image: linear-gradient(to right,  #0000ff, #00ffff) 1;
+      }
+      40% {
+        border-image: linear-gradient(to right, #00ffff,#0000ff) 1;
+      }
+      60% {
+        border-image: linear-gradient(to right, #0000ff, #00ffff) 1;
+      }
+      80% {
+        border-image: linear-gradient(to right, #00ffff,#0000ff) 1;
+      }
+      100% {
+        border-image: linear-gradient(to right,  #0000ff, #00ffff) 1;
+      }
+    
+    }
+    
+
+
+
+
