--- a/client/src/components/views/HomePage/HomePage.module.css
+++ b/client/src/components/views/HomePage/HomePage.module.css
@@ -1,18 +1,43 @@
-.h1 {
+.h1light {
     display: flex;
-    justify-items: center;
+    justify-content: center;
     align-items: center;
     font-size: 42px;
-    color: rgb(167, 12, 12);
+    color: rgb(0, 140, 158);
+    transition: transform 0.3s, filter 0.3s;
+    text-shadow: 2px 3.5px 2px rgba(0, 221, 250, 0.672); 
 }
-.container{
+.h1light:hover {
+  transform: scale(1.2);
+  transform-origin: center;
+}
+.h1dark {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 42px;
+    color: rgb(70, 233, 255);
+    transition: transform 0.3s, filter 0.3s;
+    text-shadow: 2px 3.5px 2px rgb(0, 140, 158); 
+}
+.h1dark:hover {
+  transform: scale(1.2);
+  transform-origin: center;
+}   
+.containerlight{
     display: flex;
     flex-direction: column;
     width: 100%;
     justify-items: center;
     align-items: center;
 }   
-
+.containerdark{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-items: center;
+    align-items: center;
+} 
 .pagination{
     display: flex;
     justify-content: center;
@@ -20,7 +45,7 @@
     text-align: center;
     width:min-content ;
 }
-.paginationbutton{
+.paginationbuttonlight{
     margin:1%;
     background-color: rgb(247, 246, 246);
     color: rgb(0, 0, 0);
@@ -28,10 +53,47 @@
 
 }
 
-.paginationbutton:hover{
+.paginationbuttonlight:hover{
     background-color: rgb(0, 0, 0);
     color: rgb(248, 248, 248);
     transform: scale(1.4);
 
 }
+.paginationbuttondark{
+    margin:1%;
+    background-color: rgb(0, 0, 0);
+    color: rgb(247, 246, 246);
+    transition: transform 0.6s;
 
+}
+
+.paginationbuttondark:hover{
+    background-color: rgb(0, 0, 0);
+    color: rgb(247, 246, 246);
+    transform: scale(1.4);
+
+}
+
+@keyframes borderGradientAnimation1 {
+    0% {
+      border-image: linear-gradient(to right, #ff00ff, #ff0000) 1;
+    }
+    20% {
+      border-image: linear-gradient(to right, #ff0000, #800080) 1;
+    }
+    40% {
+      border-image: linear-gradient(to right, #800080, #0000ff) 1;
+    }
+    60% {
+      border-image: linear-gradient(to right, #0000ff, #00ffff) 1;
+    }
+    80% {
+      border-image: linear-gradient(to right, #00ffff, #ff00ff) 1;
+    }
+    100% {
+      border-image: linear-gradient(to right, #ff00ff, #ff00ff) 1;
+    }
+  
+  }
+  
+  
