--- a/client/src/components/views/HomePage/HomePage.module.css
+++ b/client/src/components/views/HomePage/HomePage.module.css
@@ -97,3 +97,11 @@
   }
   
   
+  .imgcat{
+    position: fixed;
+    top:10%;
+    width: 100px;
+    height: 100px;
+    border-radius:50%;
+    left: 0;
+  }
