--- a/client/src/components/datos/Cards/Cards.css
+++ b/client/src/components/datos/Cards/Cards.css
@@ -1,4 +1,10 @@
-.container { 
+ .courses-container {
+  max-width: 60rem;
+  max-height: 20rem;
+  border: 2px solid red;
+}
+
+ .container { 
   display: grid;
   margin: 4%;
   grid-template-columns: repeat(1, 1fr);
@@ -10,7 +16,11 @@
     transform: scale(1.05);
   }
 
-.carouselDots {
+  
+
+
+
+/* .carouselDots {
   display: flex;
   column-gap: 1rem;
   position: absolute;
@@ -40,4 +50,4 @@
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
-}
+}  */
