--- a/client/src/components/datos/Card/Card.module.css
+++ b/client/src/components/datos/Card/Card.module.css
@@ -1,51 +1,71 @@
+/* BOX */
+.mainContainer1 .mainContainer1dark{
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+}
+
+.mainContainer2light .mainContainer2dark {
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+}
+
 
   .free {
     color: rgb(71, 238, 71);
     font-size: 12px;
+    padding-left: 40%;
     font-weight: bold;
+  }
+  .img{
+    height: 200px;
+    width: 200px;
+    padding-left: 30%;
+    object-fit: cover;
   }
   
   .payment {
     font-size: 12px;
-
+    padding-left: 40%;
     color: rgb(187, 50, 50);
     font-weight: bold;
   }
-  
+
   .containerlight {
-    margin: 4%;
-    padding:40px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    min-height: 23rem;
+    max-height: 23rem;
+    overflow: hidden;
+    padding:10px;
     border: 2px solid rgb(12, 1, 1);
     background-color: #ffffff;
     color: #030000;
-    overflow: hidden;
     animation: borderGradientAnimation1 infinite 2.5s;
     transition: transform 0.7s, max-height 1s ease, width 1s ease;; 
   }
   .containerlight:hover {
-
     transform: scale(1.0);
   }
 
-
   .containerdark {
-    margin: 4%;
-    padding:40px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;  
+    padding:10px;
     border: 2px solid rgb(255, 254, 254);
     background-color: #000000;
     color: #fcfcfc;
-    width: 200px;
-    max-height: 150px;
-    width: 30.8%;
     overflow: hidden;
     animation: borderGradientAnimation1 infinite 2.5s;
     transition: transform 0.7s, max-height 1s ease, width 1s ease;; 
   }
 
   .containerdark:hover {
-
     max-height: max-content;
-   width: 70%;
+    width: 70%;
     transform: scale(1.1);
   }
   .h1light {
@@ -89,12 +109,21 @@
     
     background-color: #f7f7f7;
     color: rgb(0, 0, 0);
-    font-size: 14px;
+    font-size: 24px;
+    width: 600px;
+    margin-left: 10%;
+    overflow: hidden;
+  height: 110px;
   }
   .pdark {
     background-color: #000000;
     color: rgb(243, 242, 242);
-    font-size: 14px;
+    font-size: 24px;
+    margin-left: 10%;
+    width: 600px;
+    overflow: hidden;  
+    height: 110px; 
+   
   }
   .divlight {
     background-color: #f7f7f7;
@@ -119,21 +148,21 @@
   
   .formdark {
     background-color: #000000;
-    color: rgb(243, 242, 242);   }
+    color: rgb(243, 242, 242);
+  }
 
   .hrlight {
-  background-color: #f7f7f7;
-    color: black;  }
-   .hrdark{
-   background-color: #000000;
-     color: rgb(255, 255, 255);  }
+    background-color: #f7f7f7;
+    color: black; }
+  .hrdark {
+    background-color: #000000;
+     color: rgb(255, 255, 255); }
   
   .errorlight {
     background-color: #f7f7f7;
     color: black; 
   }
-  
-    
+
   .errordark {
     background-color: #000000;
     color: rgb(255, 255, 255);   }
@@ -150,14 +179,18 @@
   .linklight {
     background-color: #f7f7f7;
     color: black;  
-    font-size: 40px;
+    font-size: 70px;
+    align-self: start;
+     letter-spacing:10px;
      text-decoration: none; }
   
     
   .linkdark {
+    align-self: start;
     background-color: #000000;
     color: rgb(255, 255, 255); 
-      font-size: 40px;
+    font-size: 70px;
+    letter-spacing:10px;
     text-decoration: none; }
 
   .ullight {
@@ -171,19 +204,15 @@
   
   .h2light {
     background-color: #f7f7f7;
-    color: black;   }
-      
-  
-    
-
-  
+    color: black;
+    margin-left: 10%;   }
 
   .h2dark {
+    margin-left: 10%;
     background-color: #000000;
     color: rgb(255, 255, 255);   }  
   
   
-
     @keyframes borderGradientAnimation1 {
       0% {
         border-image: linear-gradient(to right, #ff00ff, #ff0000) 1;
@@ -226,8 +255,3 @@
       }
     
     }
-    
-
-
-
-
