--- a/client/src/components/datos/Cards/Cards.css
+++ b/client/src/components/datos/Cards/Cards.css
@@ -1,24 +1,28 @@
- .courses-container {
+.courses-container {
+  min-width: 60rem;
+  min-height: 30rem;
   max-width: 60rem;
-  max-height: 20rem;
-  border: 2px solid red;
+  max-height: 30rem;
+  /* padding: 20rem; */
+  /* border: 2px solid red; */
 }
 
- .container { 
+
+.swiper-container {
+  margin: 4rem;
+}
+
+/* .container { 
   display: grid;
   margin: 4%;
   grid-template-columns: repeat(1, 1fr);
   justify-items: center;
   transition: transform 0.6s;
-  }
-
+  } */
+/* 
   .container:hover{
     transform: scale(1.05);
-  }
-
-  
-
-
+  } */
 
 /* .carouselDots {
   display: flex;
