--- a/client/src/components/datos/Card/Card.module.css
+++ b/client/src/components/datos/Card/Card.module.css
@@ -4,21 +4,25 @@
     padding: 16px;
     margin-bottom: 16px;
     transition: transform 0.6s;
-
+    height: 20rem;
   }
-  .cardContainer:hover {
+  /* .cardContainer:hover {
     transform: scale(1.05);
-  }
+  } */
 
   .title {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 8px;
   }
-  
+
   .description {
     font-size: 16px;
     margin-bottom: 8px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3; /* Number of lines to show */
+    -webkit-box-orient: vertical;
   }
   
   .rating {
