--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -3,7 +3,7 @@
      color: #FFFFFF;
 }
 .lightContainer{
-    color:#FFFFFF;
+   background-color: rgb(253, 245, 245);
     color: #302F2C;
 }
 body {
