--- a/client/src/components/bars/filterBar/FilterBar.module.css
+++ b/client/src/components/bars/filterBar/FilterBar.module.css
@@ -1,4 +1,4 @@
-
+/* 
 .container{
   display:flex;
   flex-direction: row;
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center; /* Agregar esta línea */
+  align-items: center;
   position: fixed;
   top: 1%;
   background-color: rgb(255, 255, 255);
@@ -52,4 +52,35 @@
   }
 
   
- 
+  */
+
+  .orderBarContainer {
+    position: relative;
+  }
+  
+  .orderBarOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+  }
+  
+  .orderBarSidebar {
+    width: 250px;
+    height: 100vh;
+    background-color: #f1f1f1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    overflow-y: auto;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+  }
+  
+  .orderBarSection {
+    padding: 20px;
+  }
+  
