--- a/client/src/components/bars/filterBar/FilterBar.module.css
+++ b/client/src/components/bars/filterBar/FilterBar.module.css
@@ -53,34 +53,81 @@
 
   
   */
+/* _________________________________________________________ */
 
-  .orderBarContainer {
-    position: relative;
+.filterBarContainer {
+  position: relative;
+}
+
+.filterBarOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+/*ESTILOS FIJOS*/
+.filterBarSidebar {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+  padding: 20px;
+  width: 300px;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  overflow-y: auto;
   }
-  
-  .orderBarOverlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 1;
+  /* CASO LIGHT */
+  .filterBarSidebar-light {
+  background-color: #f1f1f1;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
   }
-  
-  .orderBarSidebar {
-    width: 250px;
-    height: 100vh;
-    background-color: #f1f1f1;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    overflow-y: auto;
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+  /* CASO DARK */
+  .filterBarSidebar-dark {
+    background-color: black;
+    border-right: 1px solid green
   }
-  
-  .orderBarSection {
-    padding: 20px;
-  }
-  
+
+    .filterBarMainLabel {
+      font-size: 2rem ;
+      margin: 0 0 4rem;
+    }
+
+    .filterBarSection {
+      font-size: 1.5rem;
+    }
+      .filterBarSection label {
+        border: 1px solid brown;
+        padding: 15px;
+        border-radius: 10px;
+        cursor: pointer;
+      }
+      .filterBarSection label {
+        border: 1px solid brown;
+      }
+      .filterBarSection ul {
+        list-style: none;
+      }
+
+    /* ESTILOS FIJOS */
+    .filterButton {
+        margin-top: 4rem;
+      padding: 10px;
+    }
+    /* CASO LIGHT */
+    .filterButton-light {
+      background-color: #f1f1f1 ;
+      color: black;
+    }
+    /* CASO DARK */
+    .filterButton-dark {
+      background-color: black;
+      color: #f1f1f1;
+    }
