--- a/client/src/components/datos/CardCourse/CardCourse.module.css
+++ b/client/src/components/datos/CardCourse/CardCourse.module.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: space-around;
     justify-items: center;
-    width: 20%;
+    max-width: 50x;
+    max-height: 150px;
     border: 1px solid green;
 }
