--- a/client/src/components/bars/navBar/navBar.module.css
+++ b/client/src/components/bars/navBar/navBar.module.css
@@ -1,9 +1,13 @@
 .container1{
+  display: flex;
+  justify-content: space-evenly;
+
   width: 100%;
   position: fixed;
   z-index: 2;
+  height: 4rem;
+  border-bottom: 2px solid red;
 }
-
 
 .containerslight {
   justify-content: space-around;
