--- a/client/src/components/views/AdminPanel/AdminPanel.module.css
+++ b/client/src/components/views/AdminPanel/AdminPanel.module.css
@@ -1,15 +1,38 @@
 
   
-  .lightContainer {
-    background-color: #ffffff;
-    color: #302f2c;
+  .h1light {
+    margin: 3%;
+    width: 60%;
+    height: 20%;
+    
+    overflow: hidden;
+    font-size:  1.3em;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4; /* Muestra solo 4 líneas */
+    line-clamp: 4; /* Muestra solo 4 líneas */
+    text-overflow: ellipsis; /* Agrega puntos suspensivos */
+    font-size: 12px;
+    color: rgb(0, 0, 0);
   }
   
-  .h1light {
+   
+  .h1dark  {
+    margin: 3%;
+    width: 60%;
+    height: 20%;
+    overflow: hidden;
+    font-size:  1.3em;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4; /* Muestra solo 4 líneas */
+    line-clamp: 4; /* Muestra solo 4 líneas */
+    text-overflow: ellipsis; /* Agrega puntos suspensivos */
     font-size: 12px;
     color: black;
   }
-  
   .inputlight {
     background-color: white;
     color: black;
@@ -18,13 +41,82 @@
   .buttonlight {
     background-color: white;
     color: black;
+    padding: 1%;
+    margin-bottom: 2%;
+    border: 2px solid black;
+  }
+  .buttondark{
+    background-color: rgb(0, 0, 0);
+    color: rgb(248, 248, 248);
+    padding: 1%;
+    margin-bottom: 2%;
+    border: 2px solid rgb(255, 255, 255);
+  }
+
+  .formlight {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    background-color: white;
+    color: black;
+    padding: 20px;
+  }
+  
+  .formdark {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    background-color: #302f2c;
+    color: white;
+    padding: 20px;
+  }
+
+  .form2light {
+    display: grid;
+    grid-template-columns: repeat(3, 2fr);
+    justify-items: center;
+    margin:1%;
+    width: 80%;
+    border: 2px solid wheat;
+    height:100px;
+    justify-content: space-evenly;  
+    background-color: #fafafa;
+    color: rgb(0, 0, 0);
+    padding: 20px;
+  }
+  
+  
+  .form2dark {
+    display: grid;
+    grid-template-columns: repeat(3, 2fr);
+    justify-items: center;
+    margin:1%;
+    width: 80%;
+    border: 2px solid wheat;
+    height:100px;
+    justify-content: space-evenly;  
+    background-color: #302f2c;
+    color: white;
+    padding: 20px;
+  }
+  
+  .buttondark{  
+    margin-bottom: 2%;
+    background-color: white;
+    color: black;
+    padding: 1%;
     border: 2px solid black;
   }
   
-  .containerslight {
+  .containerlight {
+    padding-bottom: 20%;
+    padding-top:10% ;
     /* Estilos para containers en modo claro */
   }
-  
+  .containerdark {
+    padding-bottom: 20%;
+    padding-top:10% ;
+
+  }
+
   .labellight {
     color: black;
   }
@@ -41,9 +133,7 @@
     /* Estilos para span en modo claro */
   }
   
-  .formlight {
-    /* Estilos para form en modo claro */
-  }
+
   
   .hrlight {
     /* Estilos para hr en modo claro */
@@ -70,15 +160,35 @@
   }
   
   .h1dark {
+    display: flex;
+    justify-items: center;
+    width: 100%;
+    height: 40px;
+    align-items: center;
     font-size: 12px;
     color: white;
+    margin-bottom: 1%;
   }
-  
+  .h1light{display: flex;
+    justify-items: center;
+    width: 100%;
+    height: 40px;
+    align-items: center;
+    font-size: 12px;
+    color: rgb(15, 1, 1);
+    margin-bottom: 1%;}
   .inputdark {
     background-color: #302f2c;
     color: white;
   }
-  
+  .containeradmin{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding-bottom: 10%;
+
+    background-color: #302f2c54;
+
+  }
   .buttondark {
     background-color: #302f2c;
     color: white;
