--- a/client/src/components/datos/CardsCourse/CardsCourse.module.css
+++ b/client/src/components/datos/CardsCourse/CardsCourse.module.css
@@ -1,9 +1,8 @@
 .cardsCourseComponent {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    gap: 20px;
-
-    margin: 7rem;
-    border: 2px solid black;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+  padding: 2%;
+  margin:2%;
+  justify-content: space-evenly;
 }
